--- a/parts/stack/site.jade
+++ b/parts/stack/site.jade
@@ -70,7 +70,7 @@ template(name='sq')
                     //     i.th.icon
                     // .ui.icon.compact.large.button 
                     //     i.list.icon
-                    .medscroll
+                    .scroll
                         each site_questions
                             +s_q_item
                             .ui.divider
@@ -251,7 +251,7 @@ template(name='s_q_item')
             // .ui.divider
 template(name='stag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.small.tertiary.compact.button.zoomer.pick_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.image.label.zoomer.pick_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -260,7 +260,7 @@ template(name='stag_picker')
         //     small #{count}
 template(name='unpick_stag')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.image.black.label.zoomer.unpick_stag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.image.black.large.label.zoomer.unpick_stag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
