--- a/client/style.css
+++ b/client/style.css
@@ -797,10 +797,12 @@ input {
 
 
 .inline {
-  display:inline !important;
-  padding-right: 5px !important;
-  margin-right: 0px !important;
-  /* margin: .5em !important;2 */
+  /*display:inline !important;*/
+  /*padding-right: 5px !important;*/
+  /*margin-right: 0px !important;*/
+  /*padd: 1em !important; */
+  display: inline-block !important;
+  margin: 1em !important; 
 }
 
 .ui.header{
