better stack page

--- a/client/style.css
+++ b/client/style.css
@@ -801,7 +801,7 @@ input {
   /*padding-right: 5px !important;*/
   /*margin-right: 0px !important;*/
   /*padd: 1em !important; */
-  display: inline-block !important;
+  display: inline !important;
   margin: 1em !important; 
 }
 
