--- a/parts/stack/site.jade
+++ b/parts/stack/site.jade
@@ -15,16 +15,16 @@ template(name='sq')
                     .ui.left.icon.input
                         i.search.icon
                         input.search_site(type='text')
-                    .smallscroll                    
-                        each site_tags
-                            +stag_picker
+                    // .smallscroll                    
+                    each site_tags
+                        +stag_picker
                     // if site_emotions.count
                     //     +skve k='view_emotions' v=true l="emotions" i='smile' ionly=false
                     //     if skv_is 'view_emotions' true
                     //         i.grey.remove.link.icon.clear_emotions(title='emotions')
                     // each selected_emotions
                     //     +unpick_stag
-                    div
+                    // div
                     .ui.inline.header #{q_count}
                     if skv_is 'sort_direction' 1
                         .ui.icon.compact.basic.tertiary.button.sort_down
@@ -74,7 +74,7 @@ template(name='sq')
                         each site_questions
                             +s_q_item
                             .ui.divider
-                .four.wide.column.scrollin
+                .four.wide.column.scrolling
                     each site_emotions
                         // +stag_picker
                         .ui.large.label(title=count) #{name}
@@ -251,10 +251,10 @@ template(name='s_q_item')
             // .ui.divider
 template(name='stag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.image.label.zoomer.pick_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.image.basic.large.label.zoomer.pick_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+                img.ui.image.superzoom(src=term.watson.metadata.image )    
         strong !{name}
         // if in_dev
         //     small #{count}
