--- a/parts/reddit/ruser.jade
+++ b/parts/reddit/ruser.jade
@@ -12,7 +12,7 @@ template(name='ruser')
     with ruser_doc
         .ui.stackable.padded.grid
             .row
-                .four.wide.column
+                .three.wide.column
                     img.ui.image(src=data.snoovatar_img)
                     .ui.large.inline.header.get_user_posts(class=post_header_class)
                         |!{username} 
