--- a/parts/reddit/subreddit.jade
+++ b/parts/reddit/subreddit.jade
@@ -77,7 +77,7 @@ template(name='subreddit')
                     else
                         .ui.basic.center.aligned.segment
                             i.big.loading.yin.yang.icon
-            .four.wide.column.scrolling.seg
+            .three.wide.column.scrolling.seg
                 img.ui.inline.image(src=data.header_img)
                 .ui.inline.header.pull_latest #{data.title}
                 // +alpha
