--- a/parts/stack/su.jade
+++ b/parts/stack/su.jade
@@ -4,7 +4,7 @@ template(name='su')
     with current_site
         .ui.stackable.grid
             .row
-                .four.wide.column
+                .three.wide.column
                     // a.ui.circular.icon.button(href='/')
                     //     i.large.home.icon
                     // img.ui.inline.image.shadowed(src=high_resolution_icon_url)
@@ -114,7 +114,7 @@ template(name='stackuser_item')
             if website_url
                 a.ui.compact.small.basic.button(href=website_url target='_window')
                     |#{website_url}
-                // .four.wide.center.aligned.column
+                // .three.wide.center.aligned.column
                 //     .ui.header filter
             +suser_top_emotions
 
