--- a/parts/stack/suser.jade
+++ b/parts/stack/suser.jade
@@ -265,7 +265,7 @@ template(name='suser_dash')
             //     .item disgust avg
             //     .item anger avg
             //     .item fear avg
-        // .four.wide.column
+        // .three.wide.column
     //     .ui.header.get_tags
     //         i.tag.icon
     //         |tags
