--- a/parts/stack/stack.jade
+++ b/parts/stack/stack.jade
@@ -21,10 +21,10 @@ template(name='stack')
                     +skve k='sort_key' v='total_questions' l='q' i='question'
                     +skve k='sort_direction' v=-1 i='chevron up'
                     +skve k='sort_direction' v=1 i='chevron down'
-            // .four.wide.column
+            // .three.wide.column
             //     .ui.header stack docs
             .sixteen.wide.column.scrollin
-                // .ui.four.column.stackable.center.aligned.grid
+                // .ui.three.column.stackable.center.aligned.grid
                 .ui.centered.cards
                     each site_docs
                         a.ui.card.goto_site(href='/s/#{api_site_parameter}')
@@ -69,7 +69,8 @@ template(name='stack')
                         
                         
 template(name='loading')
-    i.big.yin.yang.loading.icon
+    .ui.basic.segment
+        i.massive.yin.yang.loading.icon
                         
 template(name='stack_site_card')
     .ui.card
