init working ruser

--- a/parts/stack/site.jade
+++ b/parts/stack/site.jade
@@ -75,6 +75,7 @@ template(name='sq')
                             +s_q_item
                             .ui.divider
                 .three.wide.column.scrolling
+                    +alpha
                     each site_emotions
                         // +stag_picker
                         .ui.large.label(title=count) #{name}
