combine stack sites and subreddits into groups

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,5 +1,5 @@
 template(name='nav')
-    .ui.fluid.attached.borderless.inverted.four.item.menu
+    .ui.fluid.attached.borderless.inverted.three.item.menu
         // a.icon.item.toggle_sidebar.no_blink
         //     i.bars.icon
     
@@ -8,9 +8,9 @@ template(name='nav')
         // a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
         //     i.search.large.icon
         a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
-            i.reddit.large.icon
-        a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
-            i.stack.exchange.large.icon
+            i.large.fire.icon
+        // a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
+        //     i.stack.exchange.large.icon
         a.icon.item.blink.clear(href="/rusers" class="{{isActiveRoute 'stack'}}")
             i.users.large.icon
         // .item(title='session karma')
