--- a/parts/reddit/subs.jade
+++ b/parts/reddit/subs.jade
@@ -1,6 +1,8 @@
 template(name='subs')
     .ui.stackable.padded.grid
         .row
+            +stack
+        .row
             unless picked_subtags
                 .sixteen.wide.center.aligned.column
                     .ui.inline.header 
