left column on search home, init working comments download and view

--- a/client/home.jade
+++ b/client/home.jade
@@ -51,7 +51,7 @@ template(name='layout')
 template(name='not_found')
     .ui.center.aligned.basic.segment
         a(href="/")
-            i.massive.yin.yang.grey.link.icon.pulse
+            i.big.yin.yang.grey.link.icon.pulse
 
 
 
