--- a/parts/reddit/rpage.jade
+++ b/parts/reddit/rpage.jade
@@ -131,7 +131,7 @@ template(name='rcomments_tab')
         .ui.compact.button #{name}
             small #{count}
     .spacer
-    each rcomments
+    each rpost_comments
         +rcomment
                 
                 
