working download rcomments and view in ruser

--- a/parts/reddit/ruser.jade
+++ b/parts/reddit/ruser.jade
@@ -69,7 +69,7 @@ template(name='ruser')
                         // +ruser_post_selector
                         .ui.small.basic.label(title=count) #{name}
                     .medscroll
-                        each rcomments
+                        each ruser_comments
                             +ruser_comment
                             .ui.divider
                     
